--- a/Solution/WebApi/appsettings.json
+++ b/Solution/WebApi/appsettings.json
@@ -12,5 +12,20 @@
   "JWT": {
     "Secret": "*&^!@#$%@!SomethingSecret!@%$#@!^&*",
     "RefreshTokenExpirationMinutes": 1440 // 1 day
+  },
+  "Discord": {
+    "Url": "https://discord.com/api/webhooks",
+    "GuildId": "1166947144280850454",
+    "Token": "SAVmFETgxWFFctteW9felLFp2Gc8ZOCIRQ8Yo_r8drv2ZLY0Qs1v47j_Hey9nW6BLOSG"
+  },
+  "WhatsApp": {
+    "Url": "https://api.fonnte.com",
+    "Token": "ncT9mdXxXG5c6pcZfi-#"
+  },
+  "Smtp": {
+    "Host": "smtp.mitrasolutech.com",
+    "Port": 465,
+    "Username": "hendry.priyatno@mitrasolutech.com",
+    "Password": "ayamgoreng123"
   }
 }
