--- a/Solution/WebClient/appsettings.json
+++ b/Solution/WebClient/appsettings.json
@@ -16,9 +16,10 @@
     "Token": "ncT9mdXxXG5c6pcZfi-#"
   },
   "Smtp": {
-    "Host": "smtp.mitrasolutech.com",
-    "Port": 465,
-    "Username": "hendry.priyatno@mitrasolutech.com",
-    "Password": "ayamgoreng123"
+    "FormAddress": "noreply.apps.001A@gmail.com",
+    "UserName": "noreply.apps.001A@gmail.com",
+    "Password": "tkit kggl odxx ynue",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
