--- a/Solution/Commons/Commons.csproj
+++ b/Solution/Commons/Commons.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="Minio" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
