--- a/Solution/WebApi/appsettings.json
+++ b/Solution/WebApi/appsettings.json
@@ -28,5 +28,11 @@
     "Password": "tkit kggl odxx ynue",
     "Host": "smtp.gmail.com",
     "Port": 587
+  },
+  "Minio": {
+    "EndPoint": "103.171.164.79:9100",
+    "AccessKey": "s7YywmlgTmvQENE959gu",
+    "SecretKey": "FFJgGUUrjvbAj97feOcVKnJ8SmBcySQo1c7iCLKK",
+    "BucketName": "test"
   }
 }
