--- a/Solution/WebClient/appsettings.json
+++ b/Solution/WebClient/appsettings.json
@@ -21,5 +21,11 @@
     "Password": "tkit kggl odxx ynue",
     "Host": "smtp.gmail.com",
     "Port": 587
+  },
+  "Minio": {
+    "EndPoint": "192.168.1.8:9100",
+    "AccessKey": "s7YywmlgTmvQENE959gu",
+    "SecretKey": "FFJgGUUrjvbAj97feOcVKnJ8SmBcySQo1c7iCLKK",
+    "BucketName":  "test"
   }
 }
