add display name on sender email

--- a/Solution/WebApi/appsettings.json
+++ b/Solution/WebApi/appsettings.json
@@ -24,6 +24,7 @@
   },
   "Smtp": {
     "FormAddress": "noreply.apps.001A@gmail.com",
+    "DisplayName": "Information Apps",
     "UserName": "noreply.apps.001A@gmail.com",
     "Password": "tkit kggl odxx ynue",
     "Host": "smtp.gmail.com",
