--- a/Solution/WebClient/appsettings.json
+++ b/Solution/WebClient/appsettings.json
@@ -17,6 +17,7 @@
   },
   "Smtp": {
     "FormAddress": "noreply.apps.001A@gmail.com",
+    "DisplayName": "Information Apps",
     "UserName": "noreply.apps.001A@gmail.com",
     "Password": "tkit kggl odxx ynue",
     "Host": "smtp.gmail.com",
