--- a/Solution/Dockerfile
+++ b/Solution/Dockerfile
@@ -1,16 +1,16 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY ["WebClient/WebClient.csproj", "WebClient/"]
 COPY ["Commons/Commons.csproj", "Commons/"]
 COPY ["Models/Models.csproj", "Models/"]
-RUN dotnet restore "WebClient/WebClient.csproj"
+RUN dotnet restore "./WebClient/WebClient.csproj"
 COPY . .
 WORKDIR "/src/WebClient"
 RUN dotnet build "WebClient.csproj" -c Release -o /app/build
