connected all database to web clinet

--- a/Solution/WebClient/appsettings.json
+++ b/Solution/WebClient/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSQLConnection": "Host=103.171.164.79;Database=template;Username=postgres;Password=Awasekagi123"
+  },
   "Discord": {
     "Url": "https://discord.com/api/webhooks",
     "GuildId": "1166947144280850454",
@@ -27,6 +30,6 @@
     "EndPoint": "192.168.1.8:9100",
     "AccessKey": "s7YywmlgTmvQENE959gu",
     "SecretKey": "FFJgGUUrjvbAj97feOcVKnJ8SmBcySQo1c7iCLKK",
-    "BucketName":  "test"
+    "BucketName": "test"
   }
 }
