--- a/Solution/Commons/Commons.csproj
+++ b/Solution/Commons/Commons.csproj
@@ -7,9 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Share\**" />
+    <EmbeddedResource Remove="Share\**" />
+    <None Remove="Share\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Others\" />
-    <Folder Include="Share\" />
   </ItemGroup>
 
   <ItemGroup>
