--- a/Solution/WebClient/appsettings.json
+++ b/Solution/WebClient/appsettings.json
@@ -6,30 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionUsed": "postgres", //mysql or postgres
   "ConnectionStrings": {
-    "PostgreSQLConnection": "Host=103.171.164.79;Database=template;Username=postgres;Password=Awasekagi123"
-  },
-  "Discord": {
-    "Url": "https://discord.com/api/webhooks",
-    "GuildId": "1166947144280850454",
-    "Token": "SAVmFETgxWFFctteW9felLFp2Gc8ZOCIRQ8Yo_r8drv2ZLY0Qs1v47j_Hey9nW6BLOSG"
-  },
-  "WhatsApp": {
-    "Url": "https://api.fonnte.com",
-    "Token": "ncT9mdXxXG5c6pcZfi-#"
-  },
-  "Smtp": {
-    "FormAddress": "noreply.apps.001A@gmail.com",
-    "DisplayName": "Information Apps",
-    "UserName": "noreply.apps.001A@gmail.com",
-    "Password": "tkit kggl odxx ynue",
-    "Host": "smtp.gmail.com",
-    "Port": 587
-  },
-  "Minio": {
-    "EndPoint": "192.168.1.8:9100",
-    "AccessKey": "s7YywmlgTmvQENE959gu",
-    "SecretKey": "FFJgGUUrjvbAj97feOcVKnJ8SmBcySQo1c7iCLKK",
-    "BucketName": "test"
+    "PostgreSQLConnection": "Host=103.171.164.79;Database=dbhris;Username=postgres;Password=Awasekagi123"
   }
 }
