--- a/Solution/Repositories/Repositories.csproj
+++ b/Solution/Repositories/Repositories.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Commons\Commons.csproj" />
     <ProjectReference Include="..\Infrastructures\Infrastructures.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
