unit test and bugs fixing user register with email

--- a/Solution/WebApi/appsettings.json
+++ b/Solution/WebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQLConnection": "Host=103.171.164.79;Database=template;Username=postgres;Password=Awasekagi123"
+    "PostgreSQLConnection": "Host=103.171.164.79;Database=dbhris;Username=postgres;Password=Awasekagi123"
   },
   "JWT": {
     "Secret": "*&^!@#$%@!SomethingSecret!@%$#@!^&*",
