--- a/Solution/Repositories/Repositories.csproj
+++ b/Solution/Repositories/Repositories.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net.WebSocket" Version="3.13.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
