--- a/Solution/Models/Models.csproj
+++ b/Solution/Models/Models.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Response\" />
+    <Compile Remove="Response\**" />
+    <EmbeddedResource Remove="Response\**" />
+    <None Remove="Response\**" />
   </ItemGroup>
 
 </Project>
