--- a/Solution/WebApi/appsettings.json
+++ b/Solution/WebApi/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "BaseUrlWebClient": "https://localhost:7031",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PostgreSQLConnection": "Host=103.171.164.79;Database=dbhris;Username=postgres;Password=Awasekagi123"
