--- a/Solution/WebClient/appsettings.json
+++ b/Solution/WebClient/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "BaseUrlWebClient": "https://localhost:7031",
   "AllowedHosts": "*",
   "ConnectionUsed": "postgres", //mysql or postgres
   "ConnectionStrings": {
