success unit test upload document finger print

--- a/Solution/WebApi/appsettings.json
+++ b/Solution/WebApi/appsettings.json
@@ -35,7 +35,7 @@
     "EndPoint": "103.171.164.79:9100",
     "AccessKey": "s7YywmlgTmvQENE959gu",
     "SecretKey": "FFJgGUUrjvbAj97feOcVKnJ8SmBcySQo1c7iCLKK",
-    "BucketName": "test"
+    "BucketName": "hrisdev"
   }
 
 }
