--- a/Solution/WebClient/appsettings.json
+++ b/Solution/WebClient/appsettings.json
@@ -36,6 +36,6 @@
     "EndPoint": "103.171.164.79:9100",
     "AccessKey": "s7YywmlgTmvQENE959gu",
     "SecretKey": "FFJgGUUrjvbAj97feOcVKnJ8SmBcySQo1c7iCLKK",
-    "BucketName": "test"
+    "BucketName": "hrisdev"
   }
 }
