--- a/Solution/Commons/Commons.csproj
+++ b/Solution/Commons/Commons.csproj
@@ -7,13 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\**" />
     <Compile Remove="Share\**" />
+    <EmbeddedResource Remove="Models\**" />
     <EmbeddedResource Remove="Share\**" />
+    <None Remove="Models\**" />
     <None Remove="Share\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="Others\" />
   </ItemGroup>
 
