--- a/Solution/WebClient/Dockerfile
+++ b/Solution/WebClient/Dockerfile
@@ -10,7 +10,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["./WebClient.csproj", "WebClient/"]
-COPY ["./Commons.csproj", "Commons/"]
+COPY ["../Commons.csproj", "Commons/"]
 COPY ["Solution/Infrastructures/Infrastructures.csproj", "Infrastructures/"]
 COPY ["Solution/Models/Models.csproj", "Models/"]
 COPY ["Solution/Repositories/Repositories.csproj", "Repositories/"]
