--- a/Solution/Dockerfile-WebClient
+++ b/Solution/Dockerfile-WebClient
@@ -1,22 +1,27 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 8080
+EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["WebClient/WebClient.csproj", "WebClient/"]
 COPY ["Commons/Commons.csproj", "Commons/"]
+COPY ["Infrastructures/Infrastructures.csproj", "Infrastructures/"]
 COPY ["Models/Models.csproj", "Models/"]
-RUN dotnet restore "./WebClient/WebClient.csproj"
+COPY ["Repositories/Repositories.csproj", "Repositories/"]
+RUN dotnet restore "./WebClient/./WebClient.csproj"
 COPY . .
 WORKDIR "/src/WebClient"
-RUN dotnet build "WebClient.csproj" -c Release -o /app/build
+RUN dotnet build "./WebClient.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "WebClient.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./WebClient.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
