--- a/Solution/docker-compose.yml
+++ b/Solution/docker-compose.yml
@@ -1,17 +1,17 @@
-version: v2.21.0
+version: "3.6"
 services:
-  hriswebclient:
-    container_name: hriswebclient
-    ports:
-        - 5101:8080
-    build:
-        dockerfile: ./Dockerfile-WebClient
-    restart: on-failure
+    hriswebclient:
+        container_name: hriswebclient
+        ports:
+            - 5101:8080
+        build:
+            dockerfile: ./Dockerfile-WebClient
+        restart: on-failure
 
-  hriswebapi:
-    container_name: hriswebapi
-    ports:
-        - 5102:8080
-    build:
-        dockerfile: ./Dockerfile-WebApi
-    restart: on-failure
+    hriswebapi:
+        container_name: hriswebapi
+        ports:
+            - 5102:8080
+        build:
+            dockerfile: ./Dockerfile-WebApi
+        restart: on-failure
