--- a/Solution/docker-compose.yml
+++ b/Solution/docker-compose.yml
@@ -15,3 +15,7 @@ services:
         build:
             dockerfile: ./Dockerfile-WebApi
         restart: on-failure
+
+volumes:
+  db-data:
+  app-data:
