--- a/Solution/docker-compose.yml
+++ b/Solution/docker-compose.yml
@@ -1,13 +1,9 @@
-version: "3.6"
+version: '3.4'
 services:
   hriswebclient:
     build:
+      context: .
       dockerfile: ./Dockerfile-WebClient
     ports:
-      - "5101:8080"
-    container_name: hriswebclient
-    restart: always
-    
-volumes:
-  db-data:
-  app-data:
+      - 5101:8080
+    container_name: hriswebclint
