--- a/Solution/Jenkinsfile
+++ b/Solution/Jenkinsfile
@@ -8,9 +8,27 @@ pipeline {
 	stages {
 		stage('Build Apps'){
 			steps {
-				sh "docker-compose -f "docker-compose.yml" up --build -d"
-			
+				echo "ini step build apps"
 			}
 		}
+
+		stage('Test Apps'){
+			steps {
+				echo "ini step test apps"
+			}
+		}
+
+		stage('Build Images'){
+			steps {
+				echo "ini step build images"
+			}
+		}
+
+		stage('Deploy Apps'){
+			steps {
+				echo "ini step deploy apps"
+			}
+		}
+
 	}
 }
