--- a/Solution/WebApi/WebApi.csproj
+++ b/Solution/WebApi/WebApi.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\Repositories\Repositories.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <SonarQubeSetting Include="sonar.exclusions">
+      <Value>**/wwwroot/**/*.*</Value>
+    </SonarQubeSetting>
+  </ItemGroup>
+
 </Project>
