--- a/Solution/Repositories/Repositories.csproj
+++ b/Solution/Repositories/Repositories.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.102.1" />
     <PackageReference Include="Discord.Net.WebSocket" Version="3.13.0" />
+    <PackageReference Include="MimeMapping" Version="2.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
