--- a/Solution/Models/Models.csproj
+++ b/Solution/Models/Models.csproj
@@ -12,4 +12,8 @@
     <None Remove="Response\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
 </Project>
