temp change connection method

--- a/Solution/WebClient/appsettings.json
+++ b/Solution/WebClient/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionUsed": "postgres", //mysql or postgres
   "ConnectionStrings": {
-    "PostgreSQLConnection": "Host=103.171.164.79;Database=dbhris;Username=postgres;Password=Awasekagi123"
+    //"PostgreSQLConnection": "Host=103.171.164.79;Database=dbhris;Username=postgres;Password=Awasekagi123"
+    //"PostgreSQLConnection": "Host=localhost;Database=dbhris;Username=postgres;Password=Awasekagi123"
   },
   "JWT": {
     "Secret": "*&^!@#$%@!SomethingSecret!@%$#@!^&*",
